avoid layout shifts

--- a/bookmarks/styles/theme/base.css
+++ b/bookmarks/styles/theme/base.css
@@ -10,6 +10,18 @@ html {
     font-size: var(--html-font-size);
     line-height: var(--html-line-height);
     -webkit-tap-highlight-color: transparent;
+    scrollbar-gutter: stable;
+}
+
+/* Reserve space for vert. scrollbar to avoid layout shifting when scrollbars are added */
+html {
+    scrollbar-gutter: stable;
+}
+
+@media (pointer: coarse) {
+    html {
+        scrollbar-gutter: initial;
+    }
 }
 
 body {
